Fixed resizing for small screens / removed horrid scrollbars

--- a/project/public/css/home.css
+++ b/project/public/css/home.css
@@ -15,7 +15,7 @@
 }
 
 .filters{
-	margin-bottom:24px;
+	margin-bottom:6%;
 }
 
 .resultsPanel, .filterPanel{
@@ -37,25 +37,13 @@
 .filterPanel{
 	float:left;
 	padding-top:24px;
+	overflow-y:auto;
 }
 
 .list-group{
 	height:120px;
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-}
- 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 12px;
-}
- 
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
 
 #filterbutton{
 	width:60%;
