--- a/project/public/css/newevent.css
+++ b/project/public/css/newevent.css
@@ -10,6 +10,7 @@
 	background-color:rgba(170,170,170,0.2);
 	border-radius:6px;
 	border:1px #BBBBBB solid;
+	overflow-y:auto;
 }
 .mappanel{
 	width:60%;
@@ -18,7 +19,7 @@
 
 .input-group{
 	width:50%;
-	margin-bottom:16px;
+	margin-bottom:2%;
 	margin-left:25%;
 }
 .daygroup{
